<resources>
    <string name="app_name">SOSfido</string>

    //login
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="register">Registrar</string>
    <string name="title_activity_home">SOSFido</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //google map keys
    <string name="google_map_key">AIzaSyCRgXvxKLvdnCP22MVogdZ0bddXZb9NEmg</string>

    //drawer
    <string name="reportes">Reportes</string>
    <string name="record">Mi Historial</string>
    <string name="suggestions">Propuestas de adopción</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="profile">Perfil</string>


    //activities

    <string name="btnregistrar">CREAR UNA CUENTA</string>
    <string name="verificar">Recuperar Contraseña</string>
    <string name="updatepassword">Actualizar</string>

    //register
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="birth_date">Fecha de nacimiento</string>
    <string name="email">Correo electrónico</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="direction">Dirección</string>
    <string name="phone">Teléfono</string>

    //upload photo
    <string name="gallery">Galería</string>
    <string name="camera">Cámara</string>

    //error strings
    <string name="there_was_an_error_try_it_later">Hubo un error, por favor intenté más tarde</string>
    <string name="no_server_connection_try_it_later">No hubo conexión al servidor, por favor intente más tarde</string>
    <string name="empty">No hay reportes para mostrar</string>
    <string name="request">No hay adopciones para mostrar</string>

    //label
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="ubicacion">Ubicación</string>
    <string name="publicado">Publicado por</string>

    //dialog report
    <string name="reporte">Reportar</string>
    <string name="propuesta">Enviar solicitud de adopción</string>
    <string name="ranimalabandonado">Animal abandonado</string>
    <string name="ranimalperidod">Animal perdido</string>

    //register animal
    <string name="nombrea">Nombre:</string>
    <string name="direcciona">Dirección:</string>
    <string name="contactoa">Contacto:</string>
    <string name="descra">Descripción:</string>

    //hint
    <string name="in">Ingresar nombre</string>
    <string name="id">Dirección</string>
    <string name="it">Teléfono</string>
    <string name="ides">Ingresar una descripción</string>
    <string name="olvido">¿Olvidó su contraseña?</string>

    <string name="emptyR">Aún no hay solicitudes para esta propuesta</string>

    <string name="solicitudes">Solicitudes</string>

    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
</resources>
