<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_publications"
            android:icon="@mipmap/ic_publications"
            android:title="@string/reportes" />
        <item
            android:id="@+id/nav_record"
            android:icon="@mipmap/ic_record"
            android:title="@string/record"/>
        <item
            android:id="@+id/nav_suggestions"
            android:icon="@mipmap/ic_suggestions"
            android:title="@string/suggestions" />
        <item
            android:id="@+id/nav_profile"
            android:visible="false"
            android:icon="@mipmap/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
