<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:focusableInTouchMode="true"
        android:fillViewport="true" >


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingRight="32dp"
            android:paddingLeft="16dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/name"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">
                    <EditText
                        android:theme="@style/EditTxtConstant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:inputType="textCapWords"
                        android:id="@+id/et_first_name"
                        android:textSize="14dp"
                        android:maxLength="30"
                        android:hint="@string/first_name"/>
                    <EditText
                        android:theme="@style/EditTxtConstant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:inputType="textCapWords"
                        android:maxLength="30"
                        android:textSize="14dp"
                        android:id="@+id/et_last_name"
                        android:hint="@string/last_name"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/birthday"/>
                <EditText
                    android:theme="@style/EditTxtConstant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:inputType="datetime"
                    android:focusable="false"
                    android:textSize="14dp"
                    android:id="@+id/et_birth_date"
                    android:hint="@string/birth_date"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/phone"/>
                <EditText
                    android:theme="@style/EditTxtConstant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textSize="14dp"
                    android:inputType="phone"
                    android:maxLength="9"
                    android:id="@+id/et_phone"
                    android:hint="@string/phone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/mapa"/>
                <EditText
                    android:theme="@style/EditTxtConstant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:inputType="text"
                    android:maxLength="40"
                    android:textSize="14dp"
                    android:id="@+id/et_district"
                    android:hint="@string/direction"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/email"/>
                <EditText
                    android:theme="@style/EditTxtConstant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textSize="14dp"
                    android:inputType="textEmailAddress"
                    android:id="@+id/et_email"
                    android:hint="@string/email"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/key"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_below="@+id/et_email"
                        android:theme="@style/EditTxtConstant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:inputType="textPassword"
                        android:textSize="14dp"
                        android:maxLength="12"
                        android:id="@+id/et_password"
                        android:hint="@string/password"/>
                    <EditText
                        android:layout_below="@id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:textSize="14dp"
                        android:maxLength="12"
                        android:theme="@style/EditTxtConstant"
                        android:inputType="textPassword"
                        android:id="@+id/et_repeat_password"
                        android:hint="@string/repeat_password"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>