<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/fondo_splash"
    tools:context="com.calidad.sosfidoapp.sosfido.Presentacion.Activies.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
       android:paddingTop="80dp"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:src="@drawable/logo" />
        <EditText
            android:id="@+id/editUser"
            android:drawableLeft="@mipmap/user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/user"
            android:inputType="textAutoComplete"
            android:maxLength="10"
            android:maxLines="1"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:theme="@style/LoginTextField"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:theme="@style/LoginTextField"
            android:drawableLeft="@mipmap/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="15"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:background="@color/white"
            android:textSize="16dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:textColor="@color/btn_color" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
