<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    android:background="@color/white"
    tools:context="com.calidad.sosfidoapp.sosfido.presentacion.activies.ForgotAccountActivity"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

<LinearLayout
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:fillViewport="true"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/key2"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Soporte de Sosfido"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_person"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:textSize="18dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textColor="#05a5b7"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="Ingresa tu correo"
            android:textSize="16sp"
            android:id="@+id/enter_name"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/lnfa_email"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/email" />

                <EditText
                    android:id="@+id/et_fa_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="14dp"
                    android:theme="@style/EditTxtConstant" />
            </LinearLayout>

            </android.support.v7.widget.CardView>
            <Button
                android:id="@+id/btn_send_email"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/verificar"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:background="@drawable/button_turquoise"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/lnfa_pass"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/key" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_fa_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="12"
                        android:textSize="14dp"
                        android:theme="@style/EditTxtConstant" />

                    <EditText
                        android:id="@+id/et_fa_repeat_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword"
                        android:maxLength="12"
                        android:textSize="14dp"
                        android:theme="@style/EditTxtConstant" />
                </LinearLayout>
            </LinearLayout>
            </android.support.v7.widget.CardView>
            <Button
                android:id="@+id/btn_update_pass"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:text="@string/updatepassword"
                android:layout_gravity="center"
                android:background="@drawable/button_turquoise"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/text" />
        </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>